syntax = "proto3";

package plugincorepb;

// UserCommand - user command
message UserCommand {
    // userID - User's unique identifier
    string userID = 1;
    // userName - Username
    string userName = 2;
}

// UsersCommand - users command
message UsersCommand {
    // nums - user nums
    int32 nums = 1;
}